--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "ejs": "2.5.3",
     "express": "4.14.0",
+    "json-loader": "0.5.4",
     "mongodb": "2.2.12",
+    "node-sass-middleware": "0.10.0",
     "react": "15.4.1",
     "react-dom": "15.4.1"
   },
