--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "0.15.3",
+    "body-parser": "1.15.2",
     "ejs": "2.5.3",
     "express": "4.14.0",
     "json-loader": "0.5.4",
